--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,5 +3,6 @@
     <div class="user">
         <input type="button" class="btn" onclick="location.href='/login'" value="LOGIN"/>
         <input type="button" class="btn" onclick="location.href='/signup'" value="SIGNUP"/>
+        <input type="button" class="btn" onclick=" location.href='/logout'" value="LOGOUT"/>
     </div>
 </div>
