--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,19 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="/public/css/base.css">
+  <link rel="stylesheet" type="text/css" href="/css/base.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="https://image.ibb.co/fOur3b/favicon.png" />
 
   <meta name="theme-color" content="#1885ed">
-  <title>Bricks.io - Homepage</title>
+  <title>Homepage</title>
 </head>
 
 <body>
   <header class="header">
     <div class="container header__container">
       <div class="header__logo"><img class="header__img" src="https://image.ibb.co/kcVou6/path3000.png">
-        <h1 class="header__title">Bricks<span class="header__light">.io</span></h1>
+        <h1 class="header__title">Kyounghwan's<span class="header__light"> Hompage</span></h1>
       </div>
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-        aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
 
       <div class="header__menu">
         <nav id="navbar" class="header__nav collapse">
