--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,15 @@
-<div style="text-align: center; color:red; margin-top: 2%">
-</div>
-<form action="/login" method="POST" class="signupform">
-    <label for="email">E-MAIL</label>
-    <input name="email" type="email" required />
-    <label for="password">PASSWORD</label>
-    <input name="password" type="password" required />
-    <button class="btn">LOGIN!</button>
-</form>
+<head>
+    <link rel="stylesheet" type="text/css" href="/css/login.css">
+</head>
+
+<div class="wrapper">
+    <form class="form-signin" action="/login" method="POST">
+      <h2 class="form-signin-heading">Please login</h2>
+      <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
+      <input type="password" class="form-control" name="password" placeholder="Password" required=""/>      
+      <label class="checkbox">
+        <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
+      </label>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>   
+    </form>
+  </div>
