--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="/css/base.css">
   <script src="/js/bricks.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="https://image.ibb.co/fOur3b/favicon.png" />
