--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,203 +1,23 @@
+<!-- views/index.ejs -->
+
+<!DOCTYPE html>
+<html>
+
 <head>
-  <link rel="stylesheet" type="text/css" href="/css/base.css">
-  <script src="/js/bricks.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/x-icon" href="https://image.ibb.co/fOur3b/favicon.png" />
-
-  <meta name="theme-color" content="#1885ed">
-  <title>Homepage</title>
+    <%- include('partials/head') %>
 </head>
 
 <body>
-  <header class="header">
-    <div class="container header__container">
-      <div class="header__logo"><img class="header__img" src="https://image.ibb.co/kcVou6/path3000.png">
-        <h1 class="header__title">Kyounghwan's<span class="header__light"> Hompage</span></h1>
-      </div>
+    <%- include('partials/nav') %>
 
-      <div class="header__menu">
-        <nav id="navbar" class="header__nav collapse">
-          <ul class="header__elenco">
-            <li class="header__el"><a href="#" class="header__link">Home</a></li>
-            <li class="header__el"><a href="#" class="header__link">Pricing</a></li>
-            <li class="header__el"><a href="#" class="header__link">Success stories</a></li>
-            <li class="header__el"><a href="#" class="header__link">Blog</a></li>
-            <li class="header__el"><a href="#" class="header__link">Contact us</a></li>
-            <li class="header__el header__el--blue"><a href="/signup" class="btn btn--white">Sign In →</a></li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-  </header>
+        <div class="container mb-3">
 
-  <div class="sect sect--padding-top">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="site">
-            <h1 class="site__title">Fast paced way to grow your business</h1>
-            <h2 class="site__subtitle">Manage analytics like a boss</h2>
-            <div class="site__box-link">
-              <a class="btn btn--width" href="">Pricing</a>
-              <a class="btn btn--revert btn--width" href="">Contact</a>
+            <div class="jumbotron">
+                <h1>Hello, World!</h1>
+                <P>제 웹사이트를 방문해 주셔서 감사합니다!</p>
             </div>
 
-          </div>
         </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="sect sect--padding-bottom">
-    <div class="container">
-      <div class="row row--center">
-        <h1 class="row__title">
-          Pricing
-        </h1>
-        <h2 class="row__sub">What fits your business the best?</h2>
-      </div>
-      
-      <div class="row row--center row--margin">
-        <div class="col-md-4 col-sm-4 price-box price-box--purple">
-          <div class="price-box__wrap">
-            <div class="price-box__img"></div>
-            <h1 class="price-box__title">
-              Startup
-            </h1>
-            <p class="price-box__people">
-              1 - 100 people
-            </p>
-            <h2 class="price-box__discount">
-              <span class="price-box__dollar">$</span>49<span class="price-box__discount--light">/mo</span>
-            </h2>
-            <h3 class="price-box__price">
-              $65/mo
-            </h3>
-            <p class="price-box__feat">
-              Features
-            </p>
-            <ul class="price-box__list">
-              <li class="price-box__list-el">1 License</li>
-              <li class="price-box__list-el">24h helpcenter</li>
-              <li class="price-box__list-el">No tasks limit</li>
-              <li class="price-box__list-el">No contractors limit </li>
-            </ul>
-            <div class="price-box__btn">
-              <a class="btn btn--purple btn--width">Start now</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- second -->
-        <div class="col-md-4 col-sm-4 price-box price-box--violet">
-          <div class="price-box__wrap">
-            <div class="price-box__img"></div>
-            <h1 class="price-box__title">
-              Business
-            </h1>
-            <p class="price-box__people">
-              100 - 500 people
-            </p>
-            <h2 class="price-box__discount">
-              <span class="price-box__dollar">$</span>149<span class="price-box__discount--light">/mo</span>
-            </h2>
-            <h3 class="price-box__price">
-              $225/mo
-            </h3>
-            <p class="price-box__feat">
-              Features
-            </p>
-            <ul class="price-box__list">
-              <li class="price-box__list-el">1 License</li>
-              <li class="price-box__list-el">24h helpcenter</li>
-              <li class="price-box__list-el">No tasks limit</li>
-              <li class="price-box__list-el">No contractors limit </li>
-            </ul>
-            <div class="price-box__btn">
-              <a class="btn btn--violet btn--width">Start now</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- terzo -->
-        <div class="col-md-4 col-sm-4 price-box price-box--blue">
-          <div class="price-box__wrap">
-            <div class="price-box__img"></div>
-            <h1 class="price-box__title">
-              Corporate
-            </h1>
-            <p class="price-box__people">
-              500+ people
-            </p>
-            <h2 class="price-box__discount">
-              <span class="price-box__dollar">$</span>399<span class="price-box__discount--light">/mo</span>
-            </h2>
-            <h3 class="price-box__price">
-              $499/mo
-            </h3>
-            <p class="price-box__feat">
-              Features
-            </p>
-            <ul class="price-box__list">
-              <li class="price-box__list-el">1 License</li>
-              <li class="price-box__list-el">24h helpcenter</li>
-              <li class="price-box__list-el">No tasks limit</li>
-              <li class="price-box__list-el">No contractors limit </li>
-            </ul>
-            <div class="price-box__btn">
-              <a class="btn btn--blue btn--width">Start now</a>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </div>
-
-
-  <div class="sect sect--white sect--no-padding" style="margin-top: 10rem;">
-    <div class="container">
-      <div class="row row--center">
-        <div class="col-md-3 col-xs-6 col-sm-6 partner">
-          <a href="#" class="partner__link">
-            <img class="partner_img" src="https://image.ibb.co/mOtHRw/fblogo.png">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-xs-6 col-sm-6 partner">
-          <a href="#" class="partner__link">
-            <img class="partner_img" src="https://image.ibb.co/npV8Yb/gitlogo.png">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-xs-6 col-sm-6 partner">
-          <a href="#" class="partner__link">
-            <img class="partner_img" src="https://image.ibb.co/cGyZ6w/stacklogo.png">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-xs-6 col-sm-6 partner">
-          <a href="#" class="partner__link">
-            <img class="partner_img" src="https://image.ibb.co/ij03zG/inlogo.png">
-          </a>
-        </div>
-
-      </div>
-    </div>
-  </div>
-
-  <footer class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2 col-xs-6">
-          <img class="footer__img" src="https://image.ibb.co/kcVou6/path3000.png" style="margin-left: .3rem;">
-          <h1 class="footer__title">Kyounghwan's <span class="footer__light">Homepage</span></h1>
-        </div>
-
-      </div>
-    </div>
-  </footer>
-
 </body>
+
+</html>
