--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -20,4 +20,7 @@
 <!-- my css -->
 <link rel="stylesheet" href="/css/master.css">
 
-<title>Kysworld's Node version</title>
+<!-- my js -->
+<!-- <script src="/public/js/script.js"> -->
+
+<title>Kysworld's Node version</title>*
