Node Board Update

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -23,4 +23,4 @@
 <!-- my js -->
 <!-- <script src="/public/js/script.js"> -->
 
-<title>Kysworld's Node version</title>*
+<title>Kysworld's Node version</title>
