--- a/views/posts/board.ejs
+++ b/views/posts/board.ejs
@@ -6,7 +6,7 @@
     <%- include('../partials/head') %>
   </head>
   <body>
-    <%- include('./partials/nav') %>
+    <%- include('../partials/nav') %>
 
     <div class="container mb-3">
 
@@ -24,7 +24,7 @@
         <tbody>
           <% if(posts == null || posts.length == 0){ %>
             <tr>
-              <td colspan=2> There is no data to show :( </td>
+              <td colspan=2> 작성된 게시글이 없습니다 :( </td>
             </tr>
           <% } %>
           <% posts.forEach(function(post) { %>
