Node Head EJS Error Update

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -21,6 +21,6 @@
 <link rel="stylesheet" href="/css/master.css">
 
 <!-- my js -->
-<!-- <script src="/public/js/script.js"> -->
+<script src="/js/script.js"></script>
 
 <title>Kysworld's Node version</title>
