Node Board Author info add

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -11,18 +11,19 @@ body {
   width: 100%;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis; /* 1 */
+  text-overflow: ellipsis;
 }
 
 .board-table {
   table-layout: fixed;
 }
+.board-table .author,
 .board-table .date {
   width: 100px;
 }
 
 .post-body{
-  white-space: pre-line; /* 2 */
+  white-space: pre-line;
 }
 .post-info{
   font-size: 0.8em;
