--- a/views/posts/board.ejs
+++ b/views/posts/board.ejs
@@ -2,11 +2,13 @@
 
 <!DOCTYPE html>
 <html>
-  <head>
-    <%- include('../partials/head') %>
-  </head>
-  <body>
-    <%- include('../partials/nav') %>
+
+<head>
+  <%- include('../partials/head') %>
+</head>
+
+<body>
+  <%- include('../partials/nav') %>
 
     <div class="container mb-3">
 
@@ -17,26 +19,38 @@
         <thead class="thead-light">
           <tr>
             <th scope="col">Title</th>
+            <th scope="col" class="author">Author</th>
             <th scope="col" class="date">Date</th>
           </tr>
         </thead>
 
         <tbody>
-          <% if(posts == null || posts.length == 0){ %>
+          <% if(posts==null || posts.length==0){ %>
             <tr>
-              <td colspan=2> 작성된 게시글이 없습니다 :( </td>
+              <td colspan=100> There is no data to show :( </td>
             </tr>
-          <% } %>
-          <% posts.forEach(function(post) { %>
-            <tr>
-              <td>
-                <a href="/posts/<%= post._id %>"><div class="ellipsis"><%= post.title %></div></a>
-              </td>
-              <td class="date">
-                <span data-date="<%= post.createdAt %>"></span> <!-- 1 -->
-              </td>
-            </tr>
-          <% }) %>
+            <% } %>
+              <% posts.forEach(function(post) { %>
+                <tr>
+                  <td>
+                    <a href="/posts/<%= post._id %>">
+                      <div class="ellipsis">
+                        <%= post.title %>
+                      </div>
+                    </a>
+                  </td>
+                  <td class="author">
+                    <div class="ellipsis">
+                      <%= post.author ? post.author.username : "" %>
+                    </div>
+                  </td>
+                  <td class="date">
+                    <span data-date="<%= post.createdAt %>">
+                      <%= post.createdAt %>
+                    </span>
+                  </td>
+                </tr>
+                <% }) %>
         </tbody>
 
       </table>
@@ -46,5 +60,6 @@
       </div>
 
     </div>
-  </body>
+</body>
+
 </html>
